testsuite/tests/grammar/invalid_lexers/or_2.lkt
import common

lexer foo_lexer {
    Example <- or("example" | or ("foo" | /))
}

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- Example("example")
}
